compiler/src/test/resources/golden/errors/name_removed_flat_spellings_hint_their_module.dawn
# v0.5.0 (docs/stdlib-naming.md): the flat spellings are gone from the public
# namespace; the unknown-name errors say where each one moved.

pub fn main() -> Unit !io = {
  let m = map_insert(map_empty(), "k", 1)
  println(trim("  x  "))
  println("${str_len("abc")}")
}
