compiler/src/test/resources/golden/errors/name_removed_flat_spellings_hint_their_module.err
error: undefined function: map_insert
  --> name_removed_flat_spellings_hint_their_module.dawn:5:11
  |
5 |   let m = map_insert(map_empty(), "k", 1)
  |           ^^^^^^^^^^
  = hint: `map_insert` was removed in v0.5.0; use std/map, then map.insert(...)
error: undefined function: map_empty
  --> name_removed_flat_spellings_hint_their_module.dawn:5:22
  |
5 |   let m = map_insert(map_empty(), "k", 1)
  |                      ^^^^^^^^^
  = hint: `map_empty` was removed in v0.5.0; use std/map, then map.empty(...)
error: undefined function: trim
  --> name_removed_flat_spellings_hint_their_module.dawn:6:11
  |
6 |   println(trim("  x  "))
  |           ^^^^
  = hint: `trim` was removed in v0.5.0; use std/str, then str.trim(...)
error: undefined function: str_len
  --> name_removed_flat_spellings_hint_their_module.dawn:7:14
  |
7 |   println("${str_len("abc")}")
  |              ^^^^^^^
  = hint: `str_len` was removed in v0.5.0; use std/str, then str.len(...)
